--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "webd6201-w2021-lab1b",
+  "name": "webd6201-w2021-ice2",
   "version": "1.0.0",
-  "description": "Demo Site for Lab 1",
+  "description": "Site for ICE 2",
   "main": "app.js",
-  "repository": "https://github.com/durhamprogrammer/WEBD6201-W2021-ICE1b.git",
-  "author": "Tom Tsiliopoulos <tsiliopoulos@hotmail.com>",
+  "repository": "https://github.com/qayyamj/WEBD6201-W2021-ICE2.git",
+  "author": "qayyamj <qayyamj@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
